Fix navigation hover bug with  touch screens on Firefox browsers.

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -64,32 +64,31 @@
     align-items: center;
 
     & .time {
-      @include respond(phone-s) { //1 rem = 8.5; 8.5 / 16;
+      @include respond(phone-s) {
+        //1 rem = 8.5; 8.5 / 16;
         display: none;
-      } 
+      }
     }
   }
 
   &__right > *,
   &__dropdown-btn
-  //&__link
   {
     padding: 0.6rem 1rem;
   }
 
   &__dropdown-btn,
-  //&__link,
   &__dropdown-content a {
     text-transform: capitalize;
   }
 
   &__dropdown {
     overflow: hidden;
+    position: relative;
 
-      @include respond(phone-s) {
-        display: none;
-      }
-    
+    @include respond(phone-s) {
+      display: none;
+    }
 
     &-btn {
       height: 100%;
@@ -105,12 +104,9 @@
 
     &-content {
       display: none;
-      position: absolute;
-      //min-width: 8rem;
-      //font-size: 1.5rem;
+      position: fixed;
       background-color: var(--color-grey-dropdown);
       outline: 2px solid;
-      //top: 3.8rem;
 
       /* Links inside the dropdown */
       & a {
@@ -142,14 +138,28 @@
     }
   }
 
-  &__dropdown:hover &__dropdown-content {
+  &__dropdown-hover:hover &__dropdown-content {
     display: block;
   }
 
-  //&__link:hover,
-  &__dropdown:hover &__dropdown-btn {
+  &__dropdown-hover:hover &__dropdown-btn {
     background-color: black;
     color: white;
+  }
+
+  &__checkbox {
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    cursor: var(--cursor-point);
+    opacity: 0 !important;
+
+    &:checked + .navigation__dropdown-content {
+      display: block;
+    }
   }
 }
 
@@ -160,7 +170,8 @@
   & > *:not(:last-child) {
     margin-right: 0.5rem;
 
-    @include respond(phone-s) { //1 rem = 8.5; 8.5 / 16;
+    @include respond(phone-s) {
+      //1 rem = 8.5; 8.5 / 16;
       margin-right: 0.7rem;
     }
   }
@@ -169,12 +180,12 @@
     display: block;
     height: 2.5rem;
     width: 2.5rem;
- 
-      @include respond(phone-s) { //1 rem = 8.5; 8.5 / 16;
-        height: 2.7rem;
-        width: 2.7rem;
-      } 
-    
+
+    @include respond(phone-s) {
+      //1 rem = 8.5; 8.5 / 16;
+      height: 2.7rem;
+      width: 2.7rem;
+    }
   }
 
   &-twitter {
